--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .card-students {
+    @apply font-saira text-sm font-medium text-[#4E596B];
+  }
+  .card-description {
+    @apply font-saira text-2xl font-semibold text-[#324361] leading-8 -tracking-[3%];
+  }
+  .card-amount {
+    @apply font-saira text-xl text-[#4E596B] cursor-pointer;
+  }
+}
